background for visible top of page, new vector images, CSS changes, and parralax fixes

--- a/zoorush/css/style.css
+++ b/zoorush/css/style.css
@@ -1,24 +1,51 @@
+
+/* ==================================================================
+Reset
+http://meyerweb.com/eric/tools/css/reset/
+   v2.0 | 20110126
+   License: none (public domain)
+====================================================================*/
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
 body {
-  background-color: transparent;
-
-  padding: 0px;
-  margin: 0px;
-  font-family: sans-serif;
-  line-height: 1.8em;
-  font-size: 1.3em;
+	line-height: 1;
 }
-
-h2 {
-  font-family: 'Roboto', sans-serif;
+ol, ul {
+	list-style: none;
 }
-
-/* background setup */
-.background {
-    background-repeat:no-repeat;
-    /* custom background-position */
-    background-position:50% 50%;
-    /* ie8- graceful degradation */
-    background-position:50% 50%\9 !important;
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
 }
 
 /* ==================================================================
@@ -79,6 +106,30 @@ section {
 }
 
 
+body {
+  background-color: transparent;
+
+  padding: 0px;
+  margin: 0px;
+  font-family: sans-serif;
+  line-height: 1.8em;
+  font-size: 1.3em;
+}
+
+h2 {
+  font-family: 'Roboto', sans-serif;
+}
+
+/* background setup */
+.background {
+    background-repeat:no-repeat;
+    /* custom background-position */
+    background-position:50% 50%;
+    /* ie8- graceful degradation */
+    background-position:50% 50%\9 !important;
+}
+
+
 /*====================================================================*/
 
 
@@ -91,7 +142,7 @@ Video Full Width and Aspect Ratio workarounds for Vimeo iframe
 }
 
 #demovideo > .video-height {
-    padding-top: 60%;
+    padding-top: 55%;
     display: block;
 }
 
@@ -135,17 +186,6 @@ p.information {
   padding-left: 20px;
 }
 
-header {
-  height: 380px;
-  background-color: transparent;
-  color: white;
-  width: 100%;
-  margin: auto;
-  padding-top: 20px;
-  padding-bottom: 10px;
-  display: block;
-}
-
 div.title {
   margin: auto;
   width: 80%;
@@ -161,10 +201,23 @@ h2.subtitle {
   margin-top: -15px;
 }
 
+/* ====================================================================
+    Logo and header
+==================================================================== */
+div#downarrow {
+  width: 80px;
+  height: 80px;
+  margin: auto;
+  margin-top: 80px;
+  background-image: url("../images/downarrow.png");
+  background-size: cover;
+}
+
 div.logo {
   width: 800px;
   margin: auto;
-  margin-top: 20px;
+  margin-top: 0px;
+  padding-top: 0px;
 }
 
 div.logo img {
@@ -239,6 +292,7 @@ ul.download li a img {
 
 div.socmeds {
   float: right;
+  margin-top: -100px;
   color: white;
 }
 
